Update by KSXGitHub/aur-packages-builder@bb99b598bb02c86bf8b885126c3a38ff2991f863

--- a/failed-build-records/aur-packages-builder.yaml
+++ b/failed-build-records/aur-packages-builder.yaml
@@ -2,3 +2,9 @@
 - pkgname: something-for-reddit
   version: 0.2.2-1
   arch: x86_64
+- pkgname: starship
+  version: 0.46.2-1
+  arch: x86_64
+- pkgname: boop-gtk
+  version: 1.5.0-1
+  arch: any
