Update by KSXGitHub/aur-packages-builder@7e60771518e6cc71fe6422a8dc07b34bd0e1fbd9

--- a/failed-build-records/aur-packages-builder.yaml
+++ b/failed-build-records/aur-packages-builder.yaml
@@ -5,3 +5,9 @@
 - pkgname: boop-gtk
   version: 1.5.0-1
   arch: any
+- pkgname: wine-valve
+  version: 5.12-3
+  arch: x86_64
+- pkgname: proton
+  version: 5.13.1b-3
+  arch: x86_64
