--- a/failed-build-records/aur-packages-builder.yaml
+++ b/failed-build-records/aur-packages-builder.yaml
@@ -5,3 +5,12 @@
 - pkgname: boop-gtk
   version: 1.5.0-1
   arch: any
+- pkgname: vkd3d-valve
+  version: 1.1-2
+  arch: x86_64
+- pkgname: wine-valve
+  version: 5.12-3
+  arch: x86_64
+- pkgname: proton
+  version: 5.13.1b-3
+  arch: x86_64
