--- a/failed-build-records/cargo-scripts-builder.yaml
+++ b/failed-build-records/cargo-scripts-builder.yaml
@@ -17,3 +17,9 @@
 - pkgname: rust-bottom
   version: 0.5.3-1
   arch: x86_64
+- pkgname: rust-evcxr_jupyter
+  version: 0.6.0-1
+  arch: x86_64
+- pkgname: rust-bottom
+  version: 0.5.3-1
+  arch: x86_64
