--- a/failed-build-records/aur-packages-builder.yaml
+++ b/failed-build-records/aur-packages-builder.yaml
@@ -41,3 +41,9 @@
 - pkgname: paru
   version: 1.8.0-1
   arch: x86_64
+- pkgname: python-googletrans
+  version: 3.1.0a0-2
+  arch: any
+- pkgname: dialect
+  version: 1.3.0-2
+  arch: any
