--- a/failed-build-records/aur-packages-builder.yaml
+++ b/failed-build-records/aur-packages-builder.yaml
@@ -53,3 +53,9 @@
 - pkgname: dialect
   version: 1.4.1-1
   arch: any
+- pkgname: python-googletrans
+  version: 4.0.0rc1-1
+  arch: any
+- pkgname: dialect
+  version: 1.4.1-2
+  arch: any
