--- a/failed-build-records/aur-packages-builder.yaml
+++ b/failed-build-records/aur-packages-builder.yaml
@@ -71,3 +71,9 @@
 - pkgname: apostrophe
   version: 2.6.1-1
   arch: any
+- pkgname: gtksourceview5
+  version: 5.4.0-1
+  arch: x86_64
+- pkgname: commit
+  version: 3.1.0-2
+  arch: x86_64
