Update by KSXGitHub/aur-packages-builder@5020b99b5f5069a88ae6add3314c2ca0af306363

--- a/failed-build-records/aur-packages-builder.yaml
+++ b/failed-build-records/aur-packages-builder.yaml
@@ -86,3 +86,9 @@
 - pkgname: komikku
   version: 0.38.0-1
   arch: any
+- pkgname: clapper
+  version: 0.4.1-1
+  arch: any
+- pkgname: apostrophe
+  version: 2.6.3-1
+  arch: any
