--- a/failed-build-records/aur-packages-builder.yaml
+++ b/failed-build-records/aur-packages-builder.yaml
@@ -101,3 +101,9 @@
 - pkgname: clapper
   version: 0.5.0-1
   arch: any
+- pkgname: clapper
+  version: 0.5.1-1
+  arch: any
+- pkgname: dialect
+  version: 1.4.1-3
+  arch: any
