--- a/failed-build-records/aur-packages-builder.yaml
+++ b/failed-build-records/aur-packages-builder.yaml
@@ -152,3 +152,18 @@
 - pkgname: komikku
   version: 1.0.0-2
   arch: any
+- pkgname: apostrophe
+  version: 2.6.3-5
+  arch: any
+- pkgname: python2
+  version: 2.7.18-6
+  arch: x86_64
+- pkgname: python2-setuptools
+  version: "2:44.1.1-2"
+  arch: any
+- pkgname: python-fasttext
+  version: 0.9.2-2
+  arch: x86_64
+- pkgname: python-dateparser
+  version: 1.1.1-1
+  arch: any
