Update by KSXGitHub/aur-packages-builder@d83705193db587db2cd1459cfe660c2b183c1221

--- a/failed-build-records/aur-packages-builder.yaml
+++ b/failed-build-records/aur-packages-builder.yaml
@@ -179,3 +179,9 @@
 - pkgname: tor-browser
   version: 11.5.5-1
   arch: x86_64
+- pkgname: tor-browser
+  version: 11.5.6-1
+  arch: x86_64
+- pkgname: pamac-aur
+  version: 10.4.2-1
+  arch: x86_64
