--- a/failed-build-records/aur-packages-builder.yaml
+++ b/failed-build-records/aur-packages-builder.yaml
@@ -1,4 +1,3 @@
----
 - pkgname: freetube
   version: 0.12.0-2
   arch: x86_64
@@ -159,7 +158,7 @@
   version: 2.7.18-6
   arch: x86_64
 - pkgname: python2-setuptools
-  version: "2:44.1.1-2"
+  version: 2:44.1.1-2
   arch: any
 - pkgname: python-fasttext
   version: 0.9.2-2
@@ -187,4 +186,7 @@
   arch: x86_64
 - pkgname: pamac-aur
   version: 10.4.3-1
+  arch: x86_64
+- pkgname: tor-browser
+  version: 11.5.7-1
   arch: x86_64
