--- a/failed-build-records/cargo-scripts-builder.yaml
+++ b/failed-build-records/cargo-scripts-builder.yaml
@@ -1,4 +1,3 @@
----
 - pkgname: rust-evcxr_jupyter
   version: 0.5.3-1
   arch: x86_64
@@ -40,4 +39,7 @@
   arch: x86_64
 - pkgname: rust-cargo-count
   version: 0.2.4-2
+  arch: x86_64
+- pkgname: rust-ter
+  version: null-1
   arch: x86_64
